2015-02-18	Kevin Zheng
	* server/shop.c: Prevent shops from claiming 'worthless' sold items
	* configure.ac: Ask for a C99 compiler

2015-02-17	Kevin Zheng
	* plugins/: Remove old shop functions from plugin interface

2014-12-21	Kevin Zheng
	* server/shop.c: Overhaul shop prices
	* server/shop.c: Skip shop price adjustment when approximating

2014-12-09	Kevin Zheng
	* server/shop.c: Change the value of unidentified items
	* common/object.c: Fix object_set_msg() to append missing newlines

2014-08-26	SilverNexus
	* lib/formulae: Added formulae incorporating leather from r19607.

2014-06-21	Kevin Zheng
	* utils/crossloop.in: This script now reads its configuration from a
	file. Changes should be made in the new file, not in the script itself.

2014-06-11	SilverNexus
	* lib/checkarch.pl: Rename old checkarch script, since it isn't
	part of the build process and isn't dynamically generated, either.
	* lib/Makefile.am: Remove checkarch script from makefile, since
	no references are made to it.

2014-05-27	SilverNexus
	* lib/formulae: Added smithery formulas to smelt ores into bars.

2014-05-27	SilverNexus
	* common/object.c: Fix inventory weight calculation bug from merging objects.

2014-05-20	SilverNexus
	* debian/cross-edit.files,
	* debian/control,
	* debian/rules: Retire crossedit construction from debian files.

2014-05-19	SilverNexus
	* utils/add_throw: Retire add_throw script, skills have been
	  with the newer system for a while now. I think it may have
	  been in excess of fifteen years.

2014-05-19	SilverNexus
	* socket/loop.c,
	* socket/request.c,
	* include/sockproto.h: Retire support for mapredraw command.
	  It hasn't been used since 1.10.0 client in 2007.
	  On the server side, its been an empty function since 2005.

2014-05-17	Andreas Kirschbaum

	* For all files being written: add error checks and retain the
	previous file contents if a write error occurs.

2014-05-15	SilverNexus
	* server/c_misc.c: Don't allow account-bound characters to change